tests/expression/list_index_type_error.sy
start :: fn do
    a :: [1, 2, 3]
    list.get(a, 0) == Maybe.Just "str"
    list.get(a, 0) == Maybe.Just 0.1
    b :: ["str", 2, 3]
    list.get(b, 0) == Maybe.Just "str"
    c :: [1, 0.1]
    list.get(c, 0) == Maybe.Just "str"
end
// error: $Mismatch
